[PAL/Linux-SGX] Add EDMM support
Enclave Dynamic Memory Management (EDMM) is a SGX2 feature, which allows
for dynamic (after enclave creation) addition, removal and change of
enclave pages and threads. This often requires round-trips from within
enclave to host kernel driver.
This commit adds support for adding, removing and changing permissions
of enclave pages. New manifest option `sgx.edmm_enable` is added, which
controls whether this feature is used for a give enclave.

Signed-off-by: Borys Popławski <borysp@invisiblethingslab.com>

--- a/pal/src/host/linux-sgx/meson.build
+++ b/pal/src/host/linux-sgx/meson.build
@@ -61,6 +61,7 @@ libpal_sgx = shared_library('pal',
     'common_manifest_sgx_parser.c',
     'enclave_api.S',
     'enclave_ecalls.c',
+    'enclave_edmm.c',
     'enclave_entry.S',
     'enclave_framework.c',
     'enclave_ocalls.c',
