--- a/pal/src/host/linux-sgx/meson.build
+++ b/pal/src/host/linux-sgx/meson.build
@@ -145,6 +145,7 @@ libpal_sgx_host = executable('loader',
     'host_profile.c',
     'host_syscall.c',
     'host_thread.c',
+    nasm_gen.process('edmm_tricks.nasm'),
     pal_linux_common_sources_host,
     pal_sgx_asm_offsets_h,
     aesm_proto_ch,
